# lightspeed

./: .devenv.flake.nix  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  index.html  requirements.txt  run.sh  shell.nix
.devenv/: input-paths.txt  nix-eval-cache.db  profile  run
.devenv/gc/: shell-1-link
.direnv/: devenv-profile-a264fa04596492b00b0050f355bf9444c8328497.rc
assets/: sw.js
src/: main.py  main.rs
src/widgets/: double_letter_button.py  overlay.py
